--- a/global.css
+++ b/global.css
@@ -49,7 +49,7 @@ h2 {
     /* Colore verde per i titoli */
 }
 
-.home-header {
+.global-header {
     background-color: #2a2a4a;
     /* Sfondo più scuro per l'header */
     padding: 15px 30px;
